# Virtual-House

./: .gitignore  FINAL_FIX_SUMMARY.md  LINUX_CRASH_DIAGNOSTIC.md  MS3D_CRASH_INFO.md  README.md  SEGFAULT_FIX_SUMMARY.md  TestApp.vcxproj  TestApp.vcxproj.filters  USAGE.md  meson.build  run_ego.sh  runmeEGO.bat  runmeEGO.sh  virtualhouse
Media/: Thumbs.db
Media/worldtiles/: 66.mtl  67.mtl  68.mtl  70.mtl  88.mtl  89.mtl  90.mtl  91.mtl  92.mtl  96.mtl  world_tiles_updated.txt
Win32Release/: TestApp.vcxproj.FileListAbsolute.txt  VirtualHouse.exe.recipe  VirtualHouse.lastbuildstate  default.txt  default.txt_Int.txt  log.txt  log.txt_Int.txt  total.txt
Win32Release/VirtualHouse.tlog/: CL.12208.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  VirtualHouse.lastbuildstate  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
fw/: Framework.lib  Framework.vcxproj  meson.build
fw/Win32Release/Framework.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Framework.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
fw/include/: FWCamera.h  FWDebug.h  FWDebugFontRenderer.h  FWDisplayInfo.h  FWInput.h  FWMath.h  FWNullWindow.h  FWStartupInfo.h  FWTime.h  FWWindow.h
fw/include/glfw/: FWGLFWGLWindow.h
fw/include/linux/: FWLinuxDebug.h  FWLinuxGLDisplayInfo.h  FWLinuxGLInclude.h  FWLinuxGLWindow.h  FWLinuxInput.h  FWLinuxTime.h  FWLinuxXInfo.h
fw/include/macos/: FWMacOSDebug.h  FWMacOSGLInclude.h  FWMacOSTime.h
fw/include/psgl/: FWGLApplication.h  FWGLExtensions.h  FWGLGrid.h  FWGLInclude.h
fw/lib/include/: FWApplication.h  FWDebug.h  FWDebugConsole.h  FWDebugFont.h  FWDebugFontData.h  FWDisplayInfo.h  FWInput.h  FWInputAsciiLookup.h  FWInputChannels.h  FWMath.h  FWNullApplication.h  FWNullDebugFontRenderer.h  FWStartupInfo.h  FWTime.h  FWWindow.h
fw/lib/include/cell/: FWCellDebug.h  FWCellInput.h  FWCellSystemCallback.h  FWCellTime.h
fw/lib/include/gcm/: FWCellGCMWindow.h  FWGCMApplication.h  FWGCMCamApplication.h  FWGCMCamControlApplication.h  FWGCMConfiguration.h  FWGCMDebugFontRenderer.h  gcmutil.h
fw/lib/include/linux/: FWLinuxGLInclude.h  FWLinuxInput.h
fw/lib/include/psgl/: FWCellGLWindow.h  FWGLCamApplication.h  FWGLCamControlApplication.h  FWGLDebugFontRenderer.h  FWGLInclude.h  FWPSGLDisplayInfo.h  FWPSGLInclude.h
fw/lib/include/win32/: FWWin32Debug.h  FWWin32DisplayInfo.h  FWWin32GLInclude.h  FWWin32GLWindow.h  FWWin32Input.h  FWWin32Time.h
fw/lib/scalar/c/: mat_aos.h  mat_aos_v.h  quat_aos.h  quat_aos_v.h  vec_aos.h  vec_aos_v.h  vectormath_aos.h  vectormath_aos_v.h
fw/lib/scalar/cpp/: mat_aos.h  quat_aos.h  vec_aos.h  vectormath_aos.h
fw/src/: FWApplication.cpp  FWCamera.cpp  FWDebugConsole.cpp  FWDebugFont.cpp  FWDebugFontRenderer.cpp  FWDisplayInfo.cpp  FWInput.cpp  FWNullApplication.cpp  FWNullDebugFontRenderer.cpp  FWNullWindow.cpp  FWWindow.cpp
fw/src/glfw/: FWGLFWGLUFunctions.cpp  FWGLFWGLWindow.cpp  FWGLFWInput.cpp  FWGLFWMain.cpp  FWGLFWTime.cpp
fw/src/linux/: FWLinuxGLExtensions.cpp  FWLinuxGLWindow.cpp  FWLinuxInput.cpp  FWLinuxMain.cpp  FWLinuxTime.cpp
fw/src/psgl/: FWCellGLWindow.cpp  FWGLApplication.cpp  FWGLCamApplication.cpp  FWGLCamControlApplication.cpp  FWGLDebugFontRenderer.cpp  FWGLExtensions.cpp  FWGLGrid.cpp
fw/testapp/: readme_j.txt
include/: drawhud.h  drawworld.h  generic.h  judgement.h  platform_audio.h  play.h  setup.h  testapp.h
include/gamespecific/: entities.h  genentities.h  genminimap.h  genvisibleworld.h  genworldgrid.h  tilenames.h
include/gamespecific/ms3d/: msModel.cpp
include/generic/: 3DMath.h  buttons.h  camera.h  drawprimatives.h  genericmath.h  loadbmp.h  loadms3d.h  loadobj.h  loadtga.h  quaternions.h  savescreenshot.h  spherebumpmesh.h  text.h
include/sky/: GLAux.h  skybox.cpp  skybox.h
lib/Cg/: cg.h  cgGL.h  cgGL_profiles.h  cg_bindlocations.h  cg_datatypes.h  cg_enums.h  cg_errors.h  cg_profiles.h  cg_types.h  cgc.h
lib/Cg/NV/: cg.h  cgGL.h  cg_bindlocations.h  cg_types.h
lib/include/: FWApplication.h  FWCamera.h  FWDebug.h  FWDebugConsole.h  FWDebugFont.h  FWDebugFontData.h  FWDebugFontRenderer.h  FWDisplayInfo.h  FWInput.h  FWInputAsciiLookup.h  FWInputChannels.h  FWMath.h  FWNullApplication.h  FWNullDebugFontRenderer.h  FWNullWindow.h  FWStartupInfo.h  FWTime.h  FWWindow.h
lib/include/cell/: FWCellDebug.h  FWCellGLWindow.h  FWCellInput.h  FWCellSystemCallback.h  FWCellTime.h
lib/include/gcm/: FWCellGCMWindow.h  FWGCMApplication.h  FWGCMCamApplication.h  FWGCMCamControlApplication.h  FWGCMConfiguration.h  FWGCMDebugFontRenderer.h  gcmutil.h
lib/include/linux/: FWLinuxDebug.h  FWLinuxGLDisplayInfo.h  FWLinuxGLInclude.h  FWLinuxGLWindow.h  FWLinuxInput.h  FWLinuxTime.h  FWLinuxXInfo.h
lib/include/psgl/: FWGLApplication.h  FWGLCamApplication.h  FWGLCamControlApplication.h  FWGLDebugFontRenderer.h  FWGLExtensions.h  FWGLGrid.h  FWGLInclude.h  FWPSGLDisplayInfo.h  FWPSGLInclude.h
lib/include/win32/: FWWin32Debug.h  FWWin32DisplayInfo.h  FWWin32GLInclude.h  FWWin32GLWindow.h  FWWin32Input.h  FWWin32Time.h
lib/scalar/c/: mat_aos.h  mat_aos_v.h  quat_aos.h  quat_aos_v.h  vec_aos.h  vec_aos_v.h  vectormath_aos.h  vectormath_aos_v.h
lib/scalar/cpp/: quat_aos.h  vec_aos.h  vectormath_aos.h
src/: start.cpp
subprojects/: glfw.wrap
